--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "Capsule",
   "version": "0.0.1",
   "description": "A simple JavaScript game development framework for kids.",
@@ -19,6 +19,9 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-shell": "~0.7.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-qunit": "~0.5.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.0"
   }
 }
